--- a/Unity/Example8_30_2016/Example8_30_2016.CSharp.csproj
+++ b/Unity/Example8_30_2016/Example8_30_2016.CSharp.csproj
@@ -13,11 +13,13 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile></CompilerResponseFile>
+    <CompilerResponseFile>
+    </CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows:5</UnityBuildTarget>
     <UnityVersion>5.3.5f1</UnityVersion>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <LangVersion Condition=" '$(VisualStudioVersion)' != '10.0' ">4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -79,6 +81,7 @@
     <Compile Include="Assets\Scripts\TurretControl.cs" />
     <Compile Include="Assets\Scripts\Turretcontrol2.cs" />
     <Compile Include="Assets\Scripts\tntScript.cs" />
+    <Compile Include="Assets\Scripts\Utility\UtilRotate.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\NewSurfaceShader.shader" />
